--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,13 @@
         "es6": true
     },
     "extends": [
-        "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
         "standard",
+        "plugin:@typescript-eslint/recommended",
         "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "prettier/standard",
+        "prettier/react"
+        // "plugin:prettier/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -41,7 +43,9 @@
           "ts": "never",
           "tsx": "never"
         }
-      ]
+      ],
+      "no-use-before-define": "off",
+      "@typescript-eslint/no-use-before-define": ["error", {"variables": false}]
     },
     "settings": {
       "import/resolver": {
