--- a/.editorconfig
+++ b/.editorconfig
@@ -7,4 +7,4 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
-trailing_comma = false
+trailing_comma = "es5"
