--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,17 @@
         }
       ],
       "no-use-before-define": "off",
-      "@typescript-eslint/no-use-before-define": ["error", {"variables": false}]
+      "@typescript-eslint/no-use-before-define": ["error", {"variables": false}],
+      "comma-dangle": [
+        "error",
+        { "arrays":
+          "always-multiline",
+          "objects": "always-multiline",
+          "imports": "always-multiline",
+          "exports": "always-multiline",
+          "functions": "never"
+        }
+      ]
     },
     "settings": {
       "import/resolver": {
