--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-select": "^3.0.19",
+    "polished": "^3.6.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "styled-components": "^5.2.0",
