--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vehicle-prices-web",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://fipeapi.appspot.com/api/1/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-select": "^3.0.19",
+    "axios": "^0.20.0",
     "polished": "^3.6.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
